--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ h1 {
     color: rgb(11, 184, 98);
 }
 
-section {
+.flexible-container {
     display: flex;
+    margin: bottom 150px;
 }
 
 .half-width {
@@ -57,6 +58,7 @@ section {
     background-image: url(exp-bg.png);
     background-position: left;
     background-repeat: no-repeat;
+    margin-bottom: 200px;
 
 
 }
@@ -73,4 +75,29 @@ section {
     border-left: blue;
     border-color: brown;
 
+}
+
+.exp-item {
+
+    width: 40%;
+    padding-left: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+
+    box-shadow: 10px 10px 40px gray;
+
+
+}
+
+#fsd {
+    border-left: 7px solid tomato;
+}
+
+#bd {
+    border-left: 7px solid rgb(14, 31, 219);
+}
+
+footer p {
+    text-align: center;
 }
